Increase robustness against DRM page flip ioctl failures v3

Centralize cleanup, only clean up things that have been allocated for
the failed ioctl call.

Fixes double-free after a flip ioctl failure.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89681

v2: Only call drmModeRmFB for flipdata->old_fb_id on receipt of last DRM
    page flip event. Fixes Black screen on making glxgears fullscreen with
    DRI3 enabled.
v3: Avoid double-free of flipdata in the unlikely case that calloc fails
    for flipcarrier, but only for the second or later CRTC.

Reviewed-by: Alex Deucher <alexander.deucher@amd.com> (v2)